[package]
name = "modern_asteroids"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
